[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name    = "fsleyes-plugin-bad-example"
version = "1.0.0"

[project.entry-points.fsleyes_views]
"Bad plugin view" = "fsleyes_plugin_bad_example.plugin:PluginView"

[project.entry-points.fsleyes_controls]
"Bad plugin control" = "fsleyes_plugin_bad_example.plugin:PluginControl"

[project.entry-points.fsleyes_tools]
"Bad plugin tool" = "fsleyes_plugin_bad_example.plugin:PluginTool"

[project.entry-points.fsleyes_layouts]
"Plugin layout" = "fsleyes_plugin_example.plugin:PluginLayout"

[tool.setuptools.packages.find]
include = ["fsleyes_plugin_bad_example*"]